# math-mcp-learning-server

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FASTMCP_2.0_MIGRATION.md  FUTURE_IMPROVEMENTS.md  LICENSE  MCP_REVIEW_RECOMMENDATIONS.md  README.md  RELEASE_NOTES_v0.4.0.md  fastmcp.json  pyproject.toml  requirements.txt
.claudecode/output-styles/: strict-git-workflow.md
.github/: PYPI_TRUSTED_PUBLISHING.md
.github/workflows/: python-publish.yml
docs/: CLOUD_DEPLOYMENT.md  EXAMPLES.md
src/math_mcp/: server.py
tests/: test_math_operations.py  test_visualization.py
